--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "private": true,
   "dependencies": {
     "@nx/next": "17.0.2",
+    "@swc/helpers": "~0.5.2",
+    "@tanstack/react-query": "^5.4.3",
+    "axios": "^1.6.0",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -22,6 +25,7 @@
     "@nx/react": "17.0.2",
     "@nx/workspace": "17.0.2",
     "@swc-node/register": "~1.6.7",
+    "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
     "@swc/plugin-styled-components": "^1.5.67",
     "@testing-library/react": "14.0.0",
